// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Breakpoint > renders correctly down prop 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: none;
}

@media (max-width: 767px) {
  .emotion-0 {
    display: block;
  }
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      Hello
    </div>
  </div>
</DocumentFragment>
`;

exports[`Breakpoint > renders correctly up prop 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: none;
}

@media (min-width: 768px) {
  .emotion-0 {
    display: block;
  }
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      Hello
    </div>
  </div>
</DocumentFragment>
`;
